index.html: placeholder

--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<a rel="me" href="https://infosec.exchange/@bitstalker">Mastodon</a>
+<!DOCTYPE html>
+<html lang="en">
+<style>
+    html { 
+        background-color: #023047; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+    }
+</style>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>01101000 01101001</title>
+</head>
+<body>
+    
+</body>
+</html>
